@@ -1085,7 +1085,7 @@
       <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
         <potname name="control-center-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1136,7 +1136,7 @@
       <component name="gnome-doc-utils" dir="gnome-doc-utils" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-doc-utils.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1411,7 +1411,7 @@
       <component name="gnome-panel" dir="gnome-panel" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-panel-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
