@@ -1,3 +1,8 @@
+2005-10-23  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnome-control-center, gnome-panel, and
+	gnome-doc-utils have been branched for gnome-2-12.
+
 2005-10-16  Funda Wang  <fundawang@linux.net.cn>
 
 	* translation-status.xml: epiphany-extensions HEAD branch is using
